--- a/templates/tag/new.html.twig
+++ b/templates/tag/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tag{% endblock %}
+{% block title %}Nouvelle catégorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Tag</h1>
+    <h1>Créer une catégorie</h1>
 
     {{ include('tag/_form.html.twig') }}
 
-    <a href="{{ path('tag_index') }}">back to list</a>
+    <a href="{{ path('tag_index') }}">Retour aux catégories</a>
 {% endblock %}
