--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Ad{% endblock %}
+{% block title %}Modification de l'annonce{% endblock %}
 
 {% block body %}
-    <h1>Edit Ad</h1>
+    <h1>Modifier l'annonce</h1>
 
     {{ include('ad/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('ad_index') }}">back to list</a>
+    <a href="{{ path('ad_index') }}">Retour aux annonces</a>
 
     {{ include('ad/_delete_form.html.twig') }}
 {% endblock %}
