--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Ad{% endblock %}
+{% block title %}Nouvelle annonce{% endblock %}
 
 {% block body %}
-    <h1>Create new Ad</h1>
+    <h1>Créer une annonce</h1>
 
     {{ include('ad/_form.html.twig') }}
 
-    <a href="{{ path('ad_index') }}">back to list</a>
+    <a href="{{ path('ad_index') }}">Retour aux annonces</a>
 {% endblock %}
