--- a/templates/tag/edit.html.twig
+++ b/templates/tag/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Tag{% endblock %}
+{% block title %}Modification de catégorie{% endblock %}
 
 {% block body %}
-    <h1>Edit Tag</h1>
+    <h1>Modifier catégorie</h1>
 
     {{ include('tag/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('tag_index') }}">back to list</a>
+    <a href="{{ path('tag_index') }}">Retour aux catégories</a>
 
     {{ include('tag/_delete_form.html.twig') }}
 {% endblock %}
