--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tag{% endblock %}
+{% block title %}Catégorie - {{ tag.label }}{% endblock %}
 
 {% block body %}
-    <h1>Tag</h1>
+    <h1>Catégorie :</h1>
 
     <table class="table">
         <tbody>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('tag_index') }}">back to list</a>
+    <a href="{{ path('tag_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('tag_edit', {'id': tag.id}) }}">edit</a>
+    <a href="{{ path('tag_edit', {'id': tag.id}) }}">Modifier</a>
 
     {{ include('tag/_delete_form.html.twig') }}
 {% endblock %}
