--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -29,7 +29,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="..." class="img-fluid rounded-start" alt="Pas d'image poto">
+              <img src="{{ asset(ad.imagePath) }}" class="img-fluid rounded-start" alt="Pas d'image poto">
             </div>
             <div class="col-md-8">
               <div class="card-body">
