--- a/templates/components/layouts/navbar.html.twig
+++ b/templates/components/layouts/navbar.html.twig
@@ -18,10 +18,9 @@
             {{ app.user.pseudo }}
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Message</a></li>
             <li><a class="dropdown-item" href="#">Mes Annonces</a></li>
             {% if is_granted('ROLE_ADMIN') %}
-            <li><a class="dropdown-item" href="#">Administrer les tags</a></li>
+            <li><a class="dropdown-item" href="{{ path('tag_index') }}">Administrer les tags</a></li>
             {% endif %}
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a></li>
