--- a/templates/ad/_form.html.twig
+++ b/templates/ad/_form.html.twig
@@ -2,6 +2,7 @@
     {{ form_row(form.title) }}
     {{ form_row(form.description) }}
     {{ form_row(form.price) }}
+    {{ form_row(form.imageFile) }}
     {{ form_row(form.tag) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
