Fix visu and fix register form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
     <body>
         {% include('components/layouts/navbar.html.twig') %}
 
-        <div class="px-4">
+        <div class="m-auto px-4" style="max-width: 1200px">
         {% block body %}{% endblock %}
         </div>
 
