--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -15,13 +15,7 @@
             {{ form_row(registrationForm.pseudo) }}
             {{ form_row(registrationForm.email) }}
             {{ form_row(registrationForm.plainPassword) }}
-            {#{ form_row(registrationForm.isAdmin) }#}
-            <div class="form-check mb-3">
-              <label class="form-check-label" for="flexCheckChecked">
-                Voulez-vous être admin ?
-              </label>
-              <input class="form-check-input" type="checkbox" id="flexCheckChecked">
-            </div>
+            {{ form_row(registrationForm.isAdmin) }}
             <div class="vstack mx-auto mb-3">
               <button class="btn btn-outline-primary" type="submit">
                 S'enregistrer
