--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -4,38 +4,49 @@
 
 {% block body %}
 
-    <div class="">
-      <a href="{{ path('ad_index') }}">Retour </a>
+<div class="d-flex">
+  <a href="{{ path('ad_index') }}">Retour </a>
+  <h1>Annonce :</h1>
+</div>
+    <div class="row">
 
-      <h1>Annonce :</h1>
+      <div class="col">
+        <img src="{{ asset(ad.imagePath) }}" class="bd-placeholder-img" width="140" height="140">
+      </div>
+
+      <div class="col">
+        <div class="d-flex mb-3">
+          <div id="voter" class="border border-dark rounded d-flex">
+            <a type="button" class="btn" href="#">-</a>
+            <p>0°</p>
+            <a type="button" class="btn" href="#">+</a>
+          </div>
+        </div>
+        <h3>{{ ad.title }}</h3>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Description</th>
+              <td>{{ ad.description }}</td>
+            </tr>
+            <tr>
+              <th>Prix</th>
+              <td>{{ ad.price }} $</td>
+            </tr>
+            <tr>
+              <th>Created_at</th>
+              <td>{{ ad.createdAt ? ad.createdAt|format_datetime('full', 'none', locale='en') : '' }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <img src="{{ asset(ad.imagePath) }}" class="bd-placeholder-img" width="140" height="140">
 
-    <td>{{ ad.title }}</td>
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Description</th>
-                <td>{{ ad.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ ad.price }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ ad.createdAt ? ad.createdAt|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Images</th>
-                <td>
-                    <img src="{{ asset(ad.imagePath) }}" class="bd-placeholder-img" width="140" height="140">
-                </td>
-            </tr>
-        </tbody>
-    </table>
 
     <a href="{{ path('ad_edit', {'id': ad.id}) }}">edit</a>
+
+
+
 
     <h1 class="mt-3">Questions :</h1>
     {% for message in app.flashes('answer_success') %}
